--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="AppTheme1" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme1" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="buttonStyle">@style/buttons</item>
         <item name="android:fillAfter">true</item>
         <item name="android:enterFadeDuration">600</item>
@@ -92,8 +92,6 @@
     <style name="listItems" parent="android:Widget.Material.Light.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@android:color/darker_gray</item>
-        <item name="android:textColor">#000000</item>
         <item name="android:textSize">24sp</item>
         <item name="android:typeface">serif</item>
         <item name="android:padding">4dp</item>
@@ -331,7 +329,7 @@
 
     <!--Card View Start-->
     <style name="cardView">
-        <item name="android:background">@color/dullWhileOverlay</item>
+        <item name="android:background">@color/white</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">8dp</item>
