--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <data>
@@ -191,6 +190,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/rsv_bg"
         android:orientation="vertical">
         <!-- Login progress -->
 
@@ -283,197 +283,123 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:orientation="vertical">
+                    android:layout_marginTop="12dp"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <android.support.v7.widget.CardView
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_margin="@dimen/cardview_compat_inset_shadow"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick='@{()->callback.OpenFormFunc(4)}'
+                        app:cardCornerRadius="20dp">
 
-                        <android.support.v7.widget.CardView
-                            android:layout_width="0dp"
+
+                        <TextView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/cardview_compat_inset_shadow"
-                            android:layout_weight="1"
-                            android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            android:onClick='@{()->callback.OpenFormFunc(1)}'
-                            app:cardCornerRadius="20dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="10dp"
-                                android:orientation="vertical"
-                                android:padding="40dp">
+                            android:layout_gravity="center_horizontal"
+                            android:text="AG"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="30sp" />
 
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_horizontal"
-                                    android:text="AG"
-                                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                                    android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="30sp" />
-                            </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
-                        </android.support.v7.widget.CardView>
-
-                        <View
-                            android:layout_width="5dp"
-                            android:layout_height="wrap_content" />
-
-                        <android.support.v7.widget.CardView
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_margin="@dimen/cardview_compat_inset_shadow"
-                            android:layout_weight="1"
-                            android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            android:onClick='@{()->callback.OpenFormFunc(2)}'
-                            app:cardCornerRadius="20dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="10dp"
-                                android:orientation="vertical"
-                                android:padding="40dp">
-
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_horizontal"
-                                    android:text="IH"
-                                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                                    android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="30sp" />
-
-
-                            </LinearLayout>
-
-                        </android.support.v7.widget.CardView>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <android.support.v7.widget.CardView
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:orientation="horizontal">
+                        android:layout_margin="@dimen/cardview_compat_inset_shadow"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick='@{()->callback.OpenFormFunc(2)}'
+                        app:cardCornerRadius="20dp">
 
-                        <android.support.v7.widget.CardView
-                            android:layout_width="0dp"
+
+                        <TextView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/cardview_compat_inset_shadow"
-                            android:layout_weight="1"
-                            android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            android:onClick='@{()->callback.OpenFormFunc(3)}'
-                            app:cardCornerRadius="20dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="10dp"
-                                android:orientation="vertical"
-                                android:padding="40dp">
+                            android:layout_gravity="center_horizontal"
+                            android:text="BC"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="30sp" />
 
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_horizontal"
-                                    android:text="RG"
-                                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                                    android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="30sp" />
-                            </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
-                        </android.support.v7.widget.CardView>
-
-                        <View
-                            android:layout_width="5dp"
-                            android:layout_height="wrap_content" />
-
-                        <android.support.v7.widget.CardView
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_margin="@dimen/cardview_compat_inset_shadow"
-                            android:layout_weight="1"
-                            android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            android:onClick='@{()->callback.OpenFormFunc(4)}'
-                            app:cardCornerRadius="20dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="10dp"
-                                android:orientation="vertical"
-                                android:padding="40dp">
-
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_horizontal"
-                                    android:text="BC"
-                                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                                    android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="30sp" />
-
-
-                            </LinearLayout>
-
-                        </android.support.v7.widget.CardView>
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="wrap_content"
-                        android:layout_height="5dp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <android.support.v7.widget.CardView
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_margin="@dimen/cardview_compat_inset_shadow"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick='@{()->callback.OpenFormFunc(5)}'
+                        app:cardCornerRadius="20dp">
 
-                        <android.support.v7.widget.CardView
-                            android:layout_width="0dp"
+
+                        <TextView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/cardview_compat_inset_shadow"
-                            android:layout_weight="1"
-                            android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            android:onClick='@{()->callback.OpenFormFunc(5)}'
-                            app:cardCornerRadius="20dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="10dp"
-                                android:orientation="vertical"
-                                android:padding="40dp">
+                            android:layout_gravity="center_horizontal"
+                            android:text="BH"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="30sp" />
 
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_horizontal"
-                                    android:text="BH"
-                                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                                    android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="30sp" />
-                            </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
-                        </android.support.v7.widget.CardView>
-                    </LinearLayout>
+                    <android.support.v7.widget.CardView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/cardview_compat_inset_shadow"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick='@{()->callback.OpenFormFunc(3)}'
+                        app:cardCornerRadius="20dp">
 
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="IH"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="30sp" />
+
+
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/cardview_compat_inset_shadow"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:onClick='@{()->callback.OpenFormFunc(1)}'
+                        app:cardCornerRadius="20dp">
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="RG"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="30sp" />
+
+
+                    </android.support.v7.widget.CardView>
                 </LinearLayout>
 
                 <LinearLayout
