--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -210,7 +210,7 @@
                                         <TextView
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:text="Month (s):"
+                                            android:text="Age (months):"
                                             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                             android:textStyle="bold" />
 
@@ -274,12 +274,12 @@
                         android:orientation="vertical">
 
                         <TextView
-                            style="@style/i_textview"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:text="@string/RS9" />
 
                         <EditText
                             android:id="@+id/RS9"
-                            style="@style/textInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:digits="@string/ed_sentence"
@@ -334,19 +334,18 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="@string/RS15"
-                            android:textAppearance="?android:attr/textAppearanceLarge" />
+                            android:text="@string/RS15" />
 
                         <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                             android:id="@+id/RS15"
-                            style="@style/textInput"
                             android:layout_marginStart="20dp"
                             android:layout_weight="70"
                             android:focusable="false"
                             android:hint="DD/MM/YYYY"
                             android:textColor="@android:color/black"
                             app:dateFormat="dd-MM-yyyy"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             app:maxDate="CR_DATE" />
 
                     </LinearLayout>
