--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -274,8 +274,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/i_textview"
                             android:text="@string/RS9" />
 
                         <EditText
@@ -332,26 +331,77 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/i_textview"
                             android:text="@string/RS15" />
 
                         <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                             android:id="@+id/RS15"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
                             android:layout_weight="70"
                             android:focusable="false"
                             android:hint="DD/MM/YYYY"
                             android:textColor="@android:color/black"
                             app:dateFormat="dd-MM-yyyy"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
                             app:maxDate="CR_DATE" />
 
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
 
+                <android.support.v7.widget.CardView
+                    android:id="@+id/RS16cv"
+                    style="@style/cardView">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="@style/i_textview"
+                            android:text="@string/RS16" />
+
+                        <RadioGroup
+                            android:id="@+id/RS16"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <RadioButton
+                                android:id="@+id/RS16a"
+                                style="@style/radiobutton"
+                                android:text="@string/RS16a" />
+
+                            <RadioButton
+                                android:id="@+id/RS16b"
+                                style="@style/radiobutton"
+                                android:text="@string/RS16b" />
+
+                            <RadioButton
+                                android:id="@+id/RS16c"
+                                style="@style/radiobutton"
+                                android:text="@string/RS16c" />
+
+                            <RadioButton
+                                android:id="@+id/RS1696"
+                                style="@style/radiobutton"
+                                android:text="@string/other" />
+
+                            <EditText
+                                android:id="@+id/RS1696x"
+                                style="@style/textInput"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:digits="@string/ed_letterOnly"
+                                android:hint="@string/other"
+                                android:text='@{RS1696.checked? RS1696x.getText().toString() : ""}'
+                                android:visibility='@{RS1696.checked? View.VISIBLE : View.GONE}' />
+                        </RadioGroup>
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
                 <!--                <Button-->
                 <!--                    android:id="@+id/checkBtn"-->
                 <!--                    android:layout_width="match_parent"-->
